--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <h1>This is the home page!</h1>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -10,28 +10,26 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="" alt=""/>
+      <img src="../images/beach.jpg" alt=""/>
     </div>
 
     <div class="item">
-      <img src="" alt=""/>
+      <img src="../images/lake.jpg" alt=""/>
     </div>
 
     <div class="item">
-      <img src="" alt=""/>
+      <img src="../images/beach.jpg" alt=""/>
     </div>
 
     <div class="item">
-      <img src="" alt=""/>
+      <img src="../images/lake.jpg" alt=""/>
     </div>
   </div>
 
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
+    <span class="sr-only">Previous</span></a>
   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <span class="sr-only">Next</span></a>
 </div>
